--- a/css/style.css
+++ b/css/style.css
@@ -242,8 +242,7 @@ button.w3view-cart {
     color: #fff;
     width: 50px;
     height: 44px;
-    background: #000;
-    border: 1px solid rgba(27, 25, 25, 0.27);
+    background: rgb(255, 255, 255);
 }
 
 /*-- //header cart button --*/
